<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spectator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings_group">Menu</string>
    <string name="title_activity_home">Spectator</string>
    <string name="create_subscription">Create</string>
    <string name="button_create">Create</string>
    <string name="uri_to_source">Uri to source</string>
    <string name="don_t_use_plugins">Don\'t use plugins</string>
    <string name="source_title">Source title</string>
    <string name="you_has_not_any_subscriptions">You has not any subscriptions</string>
    <string name="you_feed_is_empty">You feed is empty</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_subscriptions">Subscriptions</string>
    <string name="stub_feed_is_empty">Feed is empty</string>
    <string name="title_subscriptions">Subscriptions</string>
    <string name="title_subscription_editor">Subscription editor</string>
    <string name="dialog_title_create_tag">Create tag</string>
    <string name="title_feed">Feed</string>
    <string name="stub_image_not_available">Image not available</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add_subscription">Add subscription</string>
    <string name="menu_favorite">Stash</string>
    <string name="menu_add_rss">Import RSS (Atom)</string>
    <string name="dialog_create_subscription">Create subscription</string>
    <string name="dialog_edit_subscription">Edit subscription</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="error_request_value">Required field</string>
    <string name="error_invalide_url">Invalide url</string>
    <string name="error_could_not_create_a_subscription">Could not create a subscription</string>
    <string name="edit">Edit</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="delete_subscription_dialog">Delete subscrition</string>
    <string name="error_could_not_delete_subscription">Could not delete subscription</string>
    <string name="title_create_rss_dialog">Extract RSS (Atom)</string>
    <string name="error_connect_to_server_and_find_rss">Error connect to server</string>
    <string name="checkbox_rss_atom_subscription">RSS (Atom) subscription</string>
    <string name="title_information">Information</string>
    <string name="load_images">Load images</string>
    <string name="login_welcome">To synchronize subscriptions between devices you must log in to your Google Account.</string>
    <string name="login_welcome_sources">Source code of the project https://github.com/y2k/Spectator</string>
    <string name="button_login">Login by gmail account</string>
    <string name="sync_in_progress">SYNC IN PROGRESS</string>
    <string name="error_sync">ERROR SYNC</string>
    <string name="version">Version</string>
    <string name="send_feedback_via_mail">[ Send feedback (via mail) ]</string>
    <string name="error_not_email_client">You should install email client</string>
    <string name="about_spectator">About Spectator</string>
    <string name="title_settings">Settings</string>
    <string name="notification_updates_s_subscriptions">Updates %1$s subscriptions</string>
    <string name="notification_item_update_subscription">(+%1$s) %2$s</string>
    <string name="notification_new_s_snapshots">New %s snapshots</string>
    <string name="feed">Feed</string>
    <string name="error_not_rss_for_this_site_nenter_another">Not RSS for this site.\nEnter another.</string>
    <string name="hint_url_for_web_page_with_rss">Url for web page with rss</string>
    <string name="settings">Settings</string>
    <string name="show_system_notifications_on_subscriptions_updates">Show system notifications on subscriptions updates</string>
    <string name="notifications">Notifications</string>
    <string name="menu_share">Share</string>
    <string name="menu_information">Information</string>
    <string name="type_web_preview">Web Preview</string>
    <string name="type_poster">Poster</string>
    <string name="type_difference">Difference</string>
    <string name="error_failed_to_log_in_to_your_account">Failed to log in to your account.</string>
    <string name="title_stash">Stash</string>
    <string name="error_can_t_add_snapshot_to_stash">Can\'t add snapshot to stash</string>
    <string name="error_can_t_remove_snapshot_from_stash">Can\'t remove snapshot from stash</string>
    <string name="feedback_message_template">Device information:\n- %1$s (%2$s)\n- %3$s v.%4$s\n\n</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="is_web_page">Is web page</string>
    <string name="rss_atom">RSS (Atom)</string>
    <string name="error_you_must_select_a_url">You must select a URL</string>
    <string name="mail_feedback_spectator">[FEEDBACK][SPECTATOR][%s]</string>
    <string name="widget_error_the_error_occurred_refresh">The error occurred. Refresh.</string>
    <string name="pref_sources_title">Source code</string>
    <string name="pref_sources_summary">https://github.com/y2k/Spectator</string>

</resources>