<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifications"
            android:summary="@string/show_system_notifications_on_subscriptions_updates"
            android:title="@string/notifications" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_spectator" >
        <Preference
            android:key="version"
            android:title="@string/version" />
        <Preference
            android:key="source_code"
            android:summary="@string/pref_sources_summary"
            android:title="@string/pref_sources_title" />
        <Preference
            android:key="feedback"
            android:title="@string/send_feedback_via_mail" />
    </PreferenceCategory>

</PreferenceScreen>