<?xml version="1.0" encoding="utf-8"?>
<ViewAnimator xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_padding"
            android:hint="@string/source_title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginLeft="@dimen/normal_padding"
            android:layout_marginRight="@dimen/normal_padding"
            android:hint="@string/uri_to_source"
            android:inputType="textUri" />

        <!-- <CheckBox -->
        <!-- android:id="@+id/donUsePlugins" -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:minHeight="?android:attr/listPreferredItemHeight" -->
        <!-- android:text="@string/don_t_use_plugins" /> -->


        <!-- <CheckBox -->
        <!-- android:id="@+id/isRssSubscription" -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:minHeight="?android:attr/listPreferredItemHeight" -->
        <!-- android:text="@string/checkbox_rss_atom_subscription" /> -->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/buttonPanel"
            android:background="?android:attr/dividerHorizontal" />

        <LinearLayout
            android:id="@+id/buttonPanel"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <Button
                android:id="@+id/switchToRss"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rss_atom" />

            <Button
                android:id="@+id/button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/ok" />
        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</ViewAnimator>